--- a/sample/SampleApp.csproj
+++ b/sample/SampleApp.csproj
@@ -1,196 +1,44 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{31A04E70-3628-4004-B3A2-00DBD856B1D7}</ProjectGuid>
-    <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TemplateGuid>{84dd83c5-0fe3-4294-9419-09e7c8ba324f}</TemplateGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SampleApp</RootNamespace>
-    <AssemblyName>SampleApp</AssemblyName>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>True</Deterministic>
-    <AndroidApplication>True</AndroidApplication>
-    <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
-    <AndroidResgenClass>Resource</AndroidResgenClass>
-    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
-    <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
-    <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
-    <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
-    <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
-    <AndroidUseAapt2>true</AndroidUseAapt2>
+    <TargetFramework>net6.0-android</TargetFramework>
+    <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
+    <OutputType>Exe</OutputType>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationId>com.companyname.zendesk_droid</ApplicationId>
+    <ApplicationVersion>1</ApplicationVersion>
+    <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>True</DebugSymbols>
-    <DebugType>portable</DebugType>
-    <Optimize>False</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AndroidUseSharedRuntime>True</AndroidUseSharedRuntime>
-    <AndroidLinkMode>None</AndroidLinkMode>
-    <EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
-    <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugSymbols>True</DebugSymbols>
-    <DebugType>portable</DebugType>
-    <Optimize>True</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AndroidManagedSymbols>true</AndroidManagedSymbols>
-    <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
-    <AndroidLinkMode>None</AndroidLinkMode>
-    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="Mono.Android" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors" />
+    <ProjectReference Include="..\src\ChatProvidersSDK.Bindings.Droid\ChatProvidersSDK.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\ChatSDK.Bindings.Droid\ChatSDK.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\ChatSocketClient.Bindings.Droid\ChatSocketClient.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\ChatVisitorClient.Bindings.Droid\ChatVisitorClient.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\SupportSDK.Bindings.Droid\SupportSDK.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\CoreSDK.Bindings.Droid\CoreSDK.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\SupportProvidersSDK.Bindings.Droid\SupportProvidersSDK.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\ConfigurationSDK.Bindings.Droid\ConfigurationSDK.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\Belvedere.Bindings.Droid\Belvedere.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\BelvedereCore.Bindings.Droid\BelvedereCore.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\CommonUI.Bindings.Droid\CommonUI.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\Guide.Bindings.Droid\Guide.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\GuideProviders.Bindings.Droid\GuideProviders.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\Messaging.Bindings.Droid\Messaging.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\MessagingApi.Bindings.Droid\MessagingApi.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\src\Suas.Bindings.Droid\Suas.Bindings.Droid.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="MainActivity.cs" />
-    <Compile Include="Resources\Resource.designer.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.6.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.9.0.2" />
+    <PackageReference Include="Xamarin.AndroidX.Fragment" Version="1.5.5.1" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.9" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.7.0.2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.4" />
+    <PackageReference Include="Xamarin.Google.Dagger" Version="2.44.2" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.8.0.1" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8" Version="1.8.0.1" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\AboutResources.txt" />
-    <None Include="Properties\AndroidManifest.xml" />
-    <None Include="Assets\AboutAssets.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\activity_main.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-    <AndroidResource Include="Resources\layout\content_main.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-    <AndroidResource Include="Resources\values\colors.xml" />
-    <AndroidResource Include="Resources\values\dimens.xml" />
-    <AndroidResource Include="Resources\values\ic_launcher_background.xml" />
-    <AndroidResource Include="Resources\values\strings.xml" />
-    <AndroidResource Include="Resources\values\styles.xml" />
-    <AndroidResource Include="Resources\menu\menu_main.xml" />
-    <AndroidResource Include="Resources\mipmap-anydpi-v26\ic_launcher.xml" />
-    <AndroidResource Include="Resources\mipmap-anydpi-v26\ic_launcher_round.xml" />
-    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher_round.png" />
-    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher_round.png" />
-    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher_round.png" />
-    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher_round.png" />
-    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher_round.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.5" />
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.8.0.1" />
-    <PackageReference Include="Xamarin.AndroidX.Fragment" Version="1.5.1" />
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.7" />
-    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.6.1.1" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
-    <PackageReference Include="Xamarin.Google.Dagger">
-      <Version>2.41.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.7.10" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\src\ChatProvidersSDK.Bindings.Droid\ChatProvidersSDK.Bindings.Droid.csproj">
-      <Project>{d6c66ffd-a8f6-47b9-a548-d56cca010f05}</Project>
-      <Name>ChatProvidersSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\ChatSDK.Bindings.Droid\ChatSDK.Bindings.Droid.csproj">
-      <Project>{328e708c-f11d-49e3-bd12-96f861e37500}</Project>
-      <Name>ChatSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\ChatSocketClient.Bindings.Droid\ChatSocketClient.Bindings.Droid.csproj">
-      <Project>{286740b2-1395-4581-ac2d-9741dbf93e90}</Project>
-      <Name>ChatSocketClient.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\ChatVisitorClient.Bindings.Droid\ChatVisitorClient.Bindings.Droid.csproj">
-      <Project>{88ba1965-a672-4a0a-b57b-c9bba600c08b}</Project>
-      <Name>ChatVisitorClient.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\SupportSDK.Bindings.Droid\SupportSDK.Bindings.Droid.csproj">
-      <Project>{1E07FB4A-A389-4E9E-99E3-9D2594C45867}</Project>
-      <Name>SupportSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\CoreSDK.Bindings.Droid\CoreSDK.Bindings.Droid.csproj">
-      <Project>{55FE998A-3B2B-458C-A0D8-30607AE4D11F}</Project>
-      <Name>CoreSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\SupportProvidersSDK.Bindings.Droid\SupportProvidersSDK.Bindings.Droid.csproj">
-      <Project>{BA2FB740-61E4-4CC8-83C9-A27F1F5C1B2C}</Project>
-      <Name>SupportProvidersSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\ConfigurationSDK.Bindings.Droid\ConfigurationSDK.Bindings.Droid.csproj">
-      <Project>{D1A76DE0-1852-44C0-8C2F-BC965C6418B2}</Project>
-      <Name>ConfigurationSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\Belvedere.Bindings.Droid\Belvedere.Bindings.Droid.csproj">
-      <Project>{45775A06-4D52-491E-A6DB-90009A775E36}</Project>
-      <Name>Belvedere.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\BelvedereCore.Bindings.Droid\BelvedereCore.Bindings.Droid.csproj">
-      <Project>{8A93F976-D4D1-4160-99CB-03576EBE4FB0}</Project>
-      <Name>BelvedereCore.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\CommonUI.Bindings.Droid\CommonUI.Bindings.Droid.csproj">
-      <Project>{076B86E8-6223-47CF-9FFE-5B1020681E0F}</Project>
-      <Name>CommonUI.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\Guide.Bindings.Droid\Guide.Bindings.Droid.csproj">
-      <Project>{3E0D5FDD-301E-4934-8173-651A96A83838}</Project>
-      <Name>Guide.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\GuideProviders.Bindings.Droid\GuideProviders.Bindings.Droid.csproj">
-      <Project>{5333D4E9-BB5E-490B-B630-6912CE88F1F7}</Project>
-      <Name>GuideProviders.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj">
-      <Project>{11F3D9FA-1CF7-4B14-8888-9D531355280C}</Project>
-      <Name>JavaCommon.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\Messaging.Bindings.Droid\Messaging.Bindings.Droid.csproj">
-      <Project>{DA6AC94D-FC7F-4F6D-91FA-56AA909A581D}</Project>
-      <Name>Messaging.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\MessagingApi.Bindings.Droid\MessagingApi.Bindings.Droid.csproj">
-      <Project>{08BBF496-3AEA-47C6-936C-9AC8F7998D48}</Project>
-      <Name>MessagingApi.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\Suas.Bindings.Droid\Suas.Bindings.Droid.csproj">
-      <Project>{89804826-8A1A-4324-BF1E-65621400790E}</Project>
-      <Name>Suas.Bindings.Droid</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-    Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-  -->
 </Project>
