--- a/azure-pipelines/nuget.yml
+++ b/azure-pipelines/nuget.yml
@@ -68,7 +68,7 @@ jobs:
 
   - task: CopyFiles@2
     inputs:
-      contents: '$(packageName)*.nupkg'
+      contents: 'src/$(projectName)/$(packageName)*.nupkg'
       targetFolder: $(Build.ArtifactStagingDirectory)
   - task: PublishBuildArtifacts@1
     inputs:
