--- a/src/Messaging.Bindings.Droid/Messaging.Bindings.Droid.csproj
+++ b/src/Messaging.Bindings.Droid/Messaging.Bindings.Droid.csproj
@@ -39,10 +39,10 @@
 
   <ItemGroup>
     <PackageReference Include="Square.Picasso" Version="2.8.0.5" />
+    <PackageReference Include="XAB.FlexboxLayout" Version="3.0.0.2" />
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.5" />
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.4.0.6" />
-    <PackageReference Include="Xamarin.Android.Google.Android.Flexbox" Version="3.0.0.1" />
     <PackageReference Include="Xamarin.Google.Dagger" Version="2.41.0.2" />
-    <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8" Version="1.6.10" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8" Version="1.8.0.1" />
   </ItemGroup>
 </Project>
