--- a/src/CoreSDK.Bindings.Droid/CoreSDK.Bindings.Droid.csproj
+++ b/src/CoreSDK.Bindings.Droid/CoreSDK.Bindings.Droid.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Com.Jakewharton.Disklrucache" Version="2.0.2" />
+    <PackageReference Include="Xamarin.Android.Glide.DiskLruCache" Version="4.16.0.7" />
     <PackageReference Include="GoogleGson" Version="2.10.1.1" />
     <PackageReference Include="Square.OkHttp3" Version="4.10.0.1" />
     <PackageReference Include="Square.Retrofit2.ConverterGson" Version="2.9.0.1" />
