--- a/src/SupportSDK.Bindings.Droid/SupportSDK.Bindings.Droid.csproj
+++ b/src/SupportSDK.Bindings.Droid/SupportSDK.Bindings.Droid.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Com.Jakewharton.Disklrucache" Version="2.0.2" />
+    <PackageReference Include="Xamarin.Android.Glide.DiskLruCache" Version="4.16.0.7" />
     <PackageReference Include="GoogleGson" Version="2.10.1.1" />
     <PackageReference Include="Square.Picasso" Version="2.8.0.5" />
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.5" />
