--- a/src/CoreSDK.Bindings.Droid/CoreSDK.Bindings.Droid.csproj
+++ b/src/CoreSDK.Bindings.Droid/CoreSDK.Bindings.Droid.csproj
@@ -8,7 +8,7 @@
     <Description>Xamarin.Android binding library for Zendesk Core SDK</Description>
     <Company>Softeq Development Corporation</Company>
     <Copyright>Copyright © 2024 Softeq Development Corporation</Copyright>
-    <Version>4.0.8.2</Version>
+    <Version>4.0.8.3</Version>
     <Authors>Softeq Development Corp.</Authors>
     <Owners>Softeq Development Corp.</Owners>
     <PackageId>Softeq.ZendeskCore.Droid</PackageId>
@@ -27,6 +27,7 @@
   <ItemGroup>
     <AndroidLibrary Include="../../original/CoreSDK/core-4.0.8.aar" Bind="true" />
     <AndroidJavaSource Include="../../original/CoreSDK/core-4.0.8-sources.jar" Bind="false" />
+    <AndroidLibrary Include="../../original/SupportSDK/disklrucache-2.0.2.jar" Bind="false" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,7 +35,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Android.Glide.DiskLruCache" Version="4.16.0.7" />
     <PackageReference Include="GoogleGson" Version="2.10.1.1" />
     <PackageReference Include="Square.OkHttp3" Version="4.10.0.1" />
     <PackageReference Include="Square.Retrofit2.ConverterGson" Version="2.9.0.1" />
