--- a/src/SupportSDK.Bindings.Droid/SupportSDK.Bindings.Droid.csproj
+++ b/src/SupportSDK.Bindings.Droid/SupportSDK.Bindings.Droid.csproj
@@ -8,7 +8,7 @@
     <Description>Xamarin.Android binding library for Zendesk Support SDK</Description>
     <Company>Softeq Development Corporation</Company>
     <Copyright>Copyright © 2024 Softeq Development Corporation</Copyright>
-    <Version>5.1.0.2</Version>
+    <Version>5.1.0.3</Version>
     <Authors>Softeq Development Corp.</Authors>
     <Owners>Softeq Development Corp.</Owners>
     <PackageId>Softeq.ZendeskSupport.Droid</PackageId>
@@ -27,6 +27,7 @@
   <ItemGroup>
     <AndroidLibrary Include="../../original/SupportSDK/support-5.1.0.aar" Bind="true" />
     <AndroidJavaSource Include="../../original/SupportSDK/support-5.1.0-sources.jar" Bind="false" />
+    <AndroidLibrary Include="../../original/SupportSDK/disklrucache-2.0.2.jar" Bind="false" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,7 +43,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Android.Glide.DiskLruCache" Version="4.16.0.7" />
     <PackageReference Include="GoogleGson" Version="2.10.1.1" />
     <PackageReference Include="Square.Picasso" Version="2.8.0.5" />
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.5" />
